--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gatsby-transformer-sharp": "^1.6.1",
     "glamor": "^2.20.40",
     "hex2rgba": "^0.0.1",
+    "js-worker-search": "^1.2.0",
     "lunr": "^2.1.4",
     "prettier": "^1.7.4",
     "remarkable": "^1.7.1",
