--- a/plugins/gatsby-plugin-js-search/package.json
+++ b/plugins/gatsby-plugin-js-search/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "main": "index.js",
   "devDependencies": {
-    "babel-cli": "^6.24.1"
+    "babel-cli": "^6.24.1",
+    "html-entities": "^1.2.1",
+    "remove-markdown": "^0.2.2",
+    "sanitize-html": "^1.14.1",
+    "stemmer": "^1.0.1"
   },
   "keywords": [
     "gatsby",
